# FDEinterview

./: .env.example  .gitignore  Dockerfile  README.md  dockertest.sh  pyproject.toml
backend/: database.py  document_parser.py  embeddings.py  generation.py  main.py  orchestrator.py  retrieval.py
frontend/: index.html  vite.config.js
frontend/public/: index.html
frontend/src/: App.jsx  index.css
frontend/src/components/: ChatWindow.jsx  DocumentList.jsx  LoadingIndicator.jsx  MessageInput.jsx  SourceCitations.jsx
